# roc_namedpipe

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md
src/: client.cpp  client.hpp  connection.hpp  handler.hpp  namedpipeconnection.cpp  namedpipeconnection.hpp  procedures.cpp  procedures.hpp  reflectionhandler.cpp  reflectionhandler.hpp  server.cpp  server.hpp  util.cpp  util.hpp
src/objects/: bike.cpp  bike.hpp  car.cpp  car.hpp  object.hpp
tests/: CMakeLists.txt  client_test.cpp  server_test.cpp
unittests/: CMakeLists.txt  reflectionhandler_test.cpp
